--- a/GabrielaGerardoBeatriz/Readme
+++ b/GabrielaGerardoBeatriz/Readme
@@ -1,1 +1,82 @@
+# Divulgacion-Cientifica
+
+Literatura consultada
+
+
+[1] L. Abualigah, M. Q. Bashabsheh, H. Alabool, y M. Shehab, “Text Summarization: A Brief Review”, en Recent Advances in NLP: The Case of Arabic Language, vol. 874, M. Abd Elaziz, M. A. A. Al-qaness, A. A. Ewees, y A. Dahou, Eds. Cham: Springer International Publishing, 2020, pp. 1–15. doi: 10.1007/978-3-030-34614-0_1.
+
+
+[2] C. Armitage y M. Kaindl, “Auto articles: an experiment in AI-generated content”, Nature, vol. 588, núm. 7837, pp. S138–S141, dic. 2020, doi: 10.1038/d41586-020-03416-9.
+
+
+[3] I. Beltagy, K. Lo, y A. Cohan, “SciBERT: A Pretrained Language Model for Scientific Text”, 2019, doi: 10.48550/ARXIV.1903.10676.
+
+
+[4] H. C. S. Chan, H. Shan, T. Dahoun, H. Vogel, y S. Yuan, “Advancing Drug Discovery via Artificial Intelligence”, Trends in Pharmacological Sciences, vol. 40, núm. 8, pp. 592–604, ago. 2019, doi: 10.1016/j.tips.2019.06.004.
+
+
+[5] X. Chen, H.-Y. Chen, Z.-D. Chen, J.-N. Gong, y C. Y.-C. Chen, “A novel artificial intelligence protocol for finding potential inhibitors of acute myeloid leukemia”, J. Mater. Chem. B, vol. 8, núm. 10, pp. 2063–2081, 2020, doi: 10.1039/D0TB00061B.
+
+
+[6] M.-Y. Day y C.-Y. Chen, “Artificial Intelligence for Automatic Text Summarization”, en 2018 IEEE International Conference on Information Reuse and Integration (IRI), Salt Lake City, UT, jul. 2018, pp. 478–484. doi: 10.1109/IRI.2018.00076.
+
+
+[7] J. Devlin, M.-W. Chang, K. Lee, y K. Toutanova, “BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding”, 2018, doi: 10.48550/ARXIV.1810.04805.
+
+
+[8] Z. Dlamini, F. Z. Francies, R. Hull, y R. Marima, “Artificial intelligence (AI) and big data in cancer and precision oncology”, Computational and Structural Biotechnology Journal, vol. 18, pp. 2300–2311, 2020, doi: 10.1016/j.csbj.2020.08.019.
+
+
+[9] W. S. El-Kassas, C. R. Salama, A. A. Rafea, y H. K. Mohamed, “Automatic text summarization: A comprehensive survey”, Expert Systems with Applications, vol. 165, p. 113679, mar. 2021, doi: 10.1016/j.eswa.2020.113679.
+
+
+[10] N. Fleming, “How artificial intelligence is changing drug discovery”, Nature, vol. 557, núm. 7707, pp. S55–S57, may 2018, doi: 10.1038/d41586-018-05267-x.
+
+
+[11] L. Floridi y M. Chiriatti, “GPT-3: Its Nature, Scope, Limits, and Consequences”, Minds & Machines, vol. 30, núm. 4, pp. 681–694, dic. 2020, doi: 10.1007/s11023-020-09548-1.
+
+
+[12] F. Häse, L. M. Roch, y A. Aspuru-Guzik, “Next-Generation Experimentation with Self-Driving Laboratories”, Trends in Chemistry, vol. 1, núm. 3, pp. 282–291, jun. 2019, doi: 10.1016/j.trechm.2019.02.007.
+
+
+[13] S. Johansson et al., “AI-assisted synthesis prediction”, Drug Discovery Today: Technologies, vol. 32–33, pp. 65–72, dic. 2019, doi: 10.1016/j.ddtec.2020.06.002.
+
+
+[14] K. Kayser et al., “AI (artificial intelligence) in histopathology--from image analysis to automated diagnosis.”, Folia Histochem Cytobiol., vol. 47, núm. 3, pp. 355–361, feb. 2010, doi: 10.2478/v10042-009-0087-y.
+
+
+[15] F. Kiyani y O. Tas, “A survey automatic text summarization”, Pressacademia, vol. 5, núm. 1, pp. 205–213, jun. 2017, doi: 10.17261/Pressacademia.2017.591.
+
+
+[16] K. McCullough, T. Williams, K. Mingle, P. Jamshidi, y J. Lauterbach, “High-throughput experimentation meets artificial intelligence: a new pathway to catalyst discovery”, Phys. Chem. Chem. Phys., vol. 22, núm. 20, pp. 11174–11196, 2020, doi: 10.1039/D0CP00972E.
+
+
+[17] R. Merine y S. Purkayastha, “Risks and Benefits of AI-generated Text Summarization for Expert Level Content in Graduate Health Informatics”, en 2022 IEEE 10th International Conference on Healthcare Informatics (ICHI), Rochester, MN, USA, jun. 2022, pp. 567–574. doi: 10.1109/ICHI54592.2022.00113.
+
+
+[18]  nasrin nazari y M. A. Mahdavi, “A survey on Automatic Text Summarization”, JAIDM, núm. Online First, may 2018, doi: 10.22044/jadm.2018.6139.1726.
+
+
+[19] D. E. O’Leary, “Artificial Intelligence and Big Data”, IEEE Intell. Syst., vol. 28, núm. 2, pp. 96–99, mar. 2013, doi: 10.1109/MIS.2013.39.
+
+
+[20] D. Paul, G. Sanap, S. Shenoy, D. Kalyane, K. Kalia, y R. K. Tekade, “Artificial intelligence in drug discovery and development”, Drug Discov Today, vol. 26, núm. 1, pp. 80–93, ene. 2021, doi: 10.1016/j.drudis.2020.10.010.
+
+
+[21] S. Robertson, H. Azizpour, K. Smith, y J. Hartman, “Digital image analysis in breast pathology—from image processing techniques to artificial intelligence”, Translational Research, vol. 194, pp. 19–35, abr. 2018, doi: 10.1016/j.trsl.2017.10.010.
+
+
+[22] W. P. Walters y R. Barzilay, “Critical assessment of AI in drug discovery”, Expert Opinion on Drug Discovery, vol. 16, núm. 9, pp. 937–947, sep. 2021, doi: 10.1080/17460441.2021.1915982.
+
+
+[23] S. Wang et al., “Artificial Intelligence in Lung Cancer Pathology Image Analysis”, Cancers, vol. 11, núm. 11, p. 1673, oct. 2019, doi: 10.3390/cancers11111673.
+
+
+[24] C. Woolston y J. M. Perkel, “Sliced, diced and digested: AI-generated science ready in minutes”, Nature, vol. 588, núm. 7837, pp. S136–S137, dic. 2020, doi: 10.1038/d41586-020-03415-w.
+
+
+[25] Q. Xiao et al., “High-throughput proteomics and AI for cancer biomarker discovery”, Advanced Drug Delivery Reviews, vol. 176, p. 113844, sep. 2021, doi: 10.1016/j.addr.2021.113844.
+
+
+[26] M. Zhang y J. Li, “A commentary of GPT-3 in MIT Technology Review 2021”, Fundamental Research, vol. 1, núm. 6, pp. 831–833, nov. 2021, doi: 10.1016/j.fmre.2021.11.011.
 
